fixed font not inheriting on portfolio items. increased margins and gap for portfolio item text

--- a/app/_components/components.module.css
+++ b/app/_components/components.module.css
@@ -57,6 +57,8 @@ expands the portfolio item when clicked
 .itemSmallText {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
+    margin: 0.5rem;
 }
 
 /* clases related to an expanded portfolio item */
